--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: exam_ias
-description: "A new Flutter project."
+description: "IASPilot - Comprehensive test preparation for UPSC Civil Services Examination"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ^3.5.3
@@ -59,6 +59,9 @@ dependencies:
   # URL Launcher for deep linking
   url_launcher: ^6.2.0
 
+  app_links: ^6.4.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,6 +72,23 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  
+  # App Icon Generator
+  flutter_launcher_icons: ^0.13.1
+
+# App Icon Configuration
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  min_sdk_android: 21
+  
+  # Android Adaptive Icon (recommended for Android 8.0+)
+  adaptive_icon_background: "#FFFFFF"  # Change to your brand color
+  adaptive_icon_foreground: "assets/icons/app_icon.png"
+  
+  # Optional: Remove old icons before generating new ones
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
