--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "exam_ias",
-    "short_name": "exam_ias",
+    "name": "IASPilot",
+    "short_name": "IASPilot",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "IASPilot - Comprehensive test preparation for UPSC Civil Services Examination",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
